<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/setting_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="center"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="25dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/local_set"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/setting_local_selected"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/net_set"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/setting_net_normal"
            android:background="@drawable/button"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/local_set_layout"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            >

            <TextView
                android:id="@+id/seat_set_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_set_label" 
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                />

            <Spinner
                android:id="@+id/seat_row"
                style="@android:attr/spinnerDropDownItemStyle"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_below="@+id/seat_set_label"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                 />

            <TextView
                android:id="@+id/seat_row_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seat_set_label"
                android:layout_toRightOf="@+id/seat_row"
                android:text="@string/row_label" 
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                />

            <Spinner
                android:id="@+id/seat_column"
                style="@android:attr/spinnerDropDownItemStyle"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_below="@+id/seat_set_label"
                android:layout_toRightOf="@+id/seat_row_label"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                 />

            <TextView
                android:id="@+id/seat_column_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seat_set_label"
                android:layout_toRightOf="@+id/seat_column"
                android:text="@string/column_label" 
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"                />

            <TextView
                android:id="@+id/set_volumn_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seat_row"
                android:layout_marginTop="35dp"
                android:text="@string/set_volumn_label" 
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/volumn_label"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_below="@+id/set_volumn_label"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/setting_volume"/>

            <SeekBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_volumn_label"
                android:layout_toRightOf="@+id/volumn_label"
                android:minHeight="3dp"
                android:maxHeight="3dp"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:thumbOffset="5dp" 
                android:progressDrawable="@drawable/seekbar"
                android:thumb="@drawable/thumb"    
                android:layout_marginTop="20dp"
                  />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/net_set_layout"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="25dp"
            android:visibility="gone"
             >

            <TextView
                android:id="@+id/net_set_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net_set_label" 
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"/>

            <EditText
                android:id="@+id/set_addr_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/net_set_label"
                android:text="@string/net_addr" 
                android:layout_marginTop="20dp"
                android:layout_marginLeft="130dp"
                />

            <Button
                android:id="@+id/notify_net"
                style="@android:attr/spinnerDropDownItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_addr_view"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_marginLeft="151dp"
                android:background="@drawable/setting_noti_button" />
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="20dp"
        android:layout_gravity="bottom"
            >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/button"
            android:layout_marginRight="8dp" />
        
       <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
           android:text="@string/ok"
            android:background="@drawable/button"
            android:layout_marginRight="8dp" />
    </LinearLayout>

</LinearLayout>
